tests/lexer/tlexerspaces.nim
discard """
cmd: "nim check $file"
errormsg: ""
nimout: '''
tlexerspaces.nim(11, 137) Error: too many trailing spaces (maximun is 126)
tlexerspaces.nim(11, 137) Error: too many leading spaces (maximun is 126)
'''
"""


echo 12 +                                                                                                                                                                                                                                                                           5
echo 12 + 5                                                                                                                        
